--- a/Moderna_trials.rmd
+++ b/Moderna_trials.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Moderna Vaccine_performance"
-author: "Dr K"
-date: "6 Feb 2021"
+author: "Genesis Alfaro"
+date: " Summer 2024"
 output: html_document
 ---
 
