--- a/Novavax.rmd
+++ b/Novavax.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Novavax"
-author: "Dr K"
-date: "2/28/2021"
+author: "Genesis Alfaro"
+date: "summer 2024"
 output: html_document
 ---
 
