--- a/CureVac.rmd
+++ b/CureVac.rmd
@@ -1,7 +1,7 @@
 ---
 title: "CureVac"
-author: "Dr K"
-date: "6/30/2021"
+author: "Genesis Alfaro"
+date: "summer 2024"
 output: html_document
 ---
 
