--- a/AstraZenica.rmd
+++ b/AstraZenica.rmd
@@ -1,7 +1,7 @@
 ---
 title: "AstraZenica SouthAfrica"
-author: "Dr K"
-date: "2/8/2021"
+author: "Genesis Alfaro"
+date: "summer 2024"
 output: html_document
 ---
 
