--- a/astraz.Rmd
+++ b/astraz.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Astrazenica"
-author: "Dr. J"
-date: "3/23/2021"
+author: "Genesis Alfaro"
+date: "summer 2024"
 output: html_document
 ---
 
